--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,36 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../oauth2-client",
+       "options": {
+          "symlink": true,
+          "versions": {
+            "kahu-app/oauth2-client": "dev-main"
+          }
+      }
+    }
+  ],
   "require": {
     "php": "^8.2",
+    "ext-json": "*",
+    "ext-pcntl": "*",
+    "amphp/dns": "^2.0",
+    "amphp/http-server": "v3.0.0-beta.8",
     "guzzlehttp/guzzle": "^7.6",
+    "kahu-app/oauth2-client": "dev-main",
     "laravel-zero/phar-updater": "^1.3",
+    "league/oauth2-client": "^2.7",
     "psr/http-client": "^1.0",
     "psr/http-factory": "^1.0",
-    "psr/http-message": "^2.0",
-    "symfony/console": "^6.2"
+    "psr/http-message": "^1.1",
+    "psr/log": "^3.0",
+    "symfony/console": "^6.2",
+    "symfony/process": "^6.2"
+  },
+  "require-dev": {
+    "psy/psysh": "^0.11.17"
   }
 }
