--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "kahu-app/cli",
+  "name": "kahu/cli",
   "description": "Kahu.app Command-line interface",
   "type": "project",
   "license": "MIT",
@@ -31,7 +31,7 @@
        "options": {
           "symlink": true,
           "versions": {
-            "kahu-app/oauth2-client": "dev-main"
+            "kahu/oauth2-client": "dev-main"
           }
       }
     }
@@ -42,16 +42,22 @@
     "ext-pcntl": "*",
     "amphp/dns": "^2.0",
     "amphp/http-server": "v3.0.0-beta.8",
+    "flavioheleno/jay": "^0.3.0",
     "guzzlehttp/guzzle": "^7.6",
-    "kahu-app/oauth2-client": "dev-main",
+    "kahu/oauth2-client": "dev-main",
     "laravel-zero/phar-updater": "^1.3",
+    "league/config": "^1.2",
     "league/oauth2-client": "^2.7",
+    "php-di/php-di": "^7.0",
+    "psr/container": "^2.0",
     "psr/http-client": "^1.0",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.1",
     "psr/log": "^3.0",
     "symfony/console": "^6.2",
-    "symfony/process": "^6.2"
+    "symfony/filesystem": "^6.2",
+    "symfony/process": "^6.2",
+    "teapot/status-code": "^2.1"
   },
   "require-dev": {
     "psy/psysh": "^0.11.17"
