--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
       "Kahu\\Cli\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Kahu\\Cli\\Test\\": "tests/"
+    }
+  },
   "config": {
     "optimize-autoloader": true,
     "sort-packages": true,
@@ -24,27 +29,17 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "repositories": [
-    {
-      "type": "path",
-      "url": "../oauth2-client",
-       "options": {
-          "symlink": true,
-          "versions": {
-            "kahu/oauth2-client": "dev-main"
-          }
-      }
-    }
-  ],
   "require": {
     "php": "^8.2",
     "ext-json": "*",
     "ext-pcntl": "*",
+    "ext-posix": "*",
     "amphp/dns": "^2.0",
     "amphp/http-server": "v3.0.0-beta.8",
     "flavioheleno/jay": "^0.3.0",
+    "flavioheleno/scale": "^0.2.2",
     "guzzlehttp/guzzle": "^7.6",
-    "kahu/oauth2-client": "dev-main",
+    "kahu/oauth2-client": "^1.0",
     "laravel-zero/phar-updater": "^1.3",
     "league/config": "^1.2",
     "league/oauth2-client": "^2.7",
@@ -55,11 +50,17 @@
     "psr/http-message": "^1.1",
     "psr/log": "^3.0",
     "symfony/console": "^6.2",
+    "symfony/expression-language": "^6.3",
     "symfony/filesystem": "^6.2",
     "symfony/process": "^6.2",
     "teapot/status-code": "^2.1"
   },
   "require-dev": {
-    "psy/psysh": "^0.11.17"
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpstan/phpstan": "^1.10",
+    "phpunit/phpunit": "^10.2",
+    "psy/psysh": "^0.11.18",
+    "roave/security-advisories": "dev-latest",
+    "squizlabs/php_codesniffer": "^3.7"
   }
 }
