--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.1",
     "psr/log": "^3.0",
+    "stechstudio/backoff": "^1.2",
     "symfony/console": "^6.2",
     "symfony/expression-language": "^6.3",
     "symfony/filesystem": "^6.2",
